# Reading_sessions

./: .dockerignore  .env  .env.dc  .env.example  .env.local  .gitignore  README.md  docker-compose.yml  hosts  pyproject.toml
!!!/: Dockerfile  docker-compose.yml
docker/nginx/: nginx.conf
documentation/: setup.md  task-notes.md
src/: db.sqlite3
src/api/: settings.py  urls.py  yasg.py
src/api/docker/: Dockerfile
src/api/docker/nginx/: nginx.conf.template
src/books/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
src/books/management/commands/: create_admin.py  fill_books.py  fill_users.py
src/books/migrations/: 0001_initial.py  0002_alter_book_publication_year_and_more.py  0002_readingsession_total_time_and_more.py  0003_alter_readingsession_start_time.py  0004_readingprofile.py  0005_alter_readingprofile_daily_reading_time.py
tests/: conftest.py
tests/api_tests/: test_book_api.py  test_user_api.py
tests/model_tests/: test_book_models.py  test_readin_sessions_models.py  test_reading_profile_models.py
tests/unit_tests/: test_models.py  test_spoof.py
